--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/4-import-data-into-your-database.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/4-import-data-into-your-database.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-common-data-service.4-import-data-into-your-database
-title: Erstellen einer Entität und Importieren von Daten in Ihre CDS für Apps-Datenbank
+title: Erstellen einer Entität und Importieren von Daten in Ihre Datenbank von Common Data Service für Apps
 metadata:
   title: Importieren von Daten in Ihre Datenbank
   description: Importieren von Daten in Ihre Datenbank
@@ -9,11 +9,11 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: bc4e6fd8f05a309cf66ff7b3d6d9782d2779a656
-  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
+  ms.openlocfilehash: f501c5e5099f50e03266f68e1e4418a5d8dfbfe2
+  ms.sourcegitcommit: 1e4ec50e3f3c2902d4342a9587f6cc5848193a1e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/11/2018
-  ms.locfileid: "44375097"
+  ms.lasthandoff: 09/13/2018
+  ms.locfileid: "45532633"
 durationInMinutes: 12
 content: '[!include[](includes/4-import-data-into-your-database.md)]'
