--- a/learn-bizapps-pr/paths/create-app-models-business-processes/index.yml
+++ b/learn-bizapps-pr/paths/create-app-models-business-processes/index.yml
@@ -1,25 +1,30 @@
 ### YamlMime:LearningPath
 uid: learn-bizapps.create-app-models-business-processes
+metadata:
+  title: Erstellen einer modellgesteuerten Anwendung
+  description: Dieser Lernpfad bietet eine Einführung in das Erstellen einer modellgesteuerten PowerApp, die Common Data Service für Apps verwendet.
+  ms.date: 09/24/2018
+  author: margoc
+  ms.author: margoc
+  ms.topic: interactive-tutorial
+  ms.prod: learning-powerapps
+  ms.openlocfilehash: 5adae45a3af4a93520b7b3b14842e6f8713c86d2
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600826"
 title: Erstellen einer modellgesteuerten Anwendung
-summary: Dieser Lernpfad bietet eine Einführung in das Erstellen einer modellgesteuerten PowerApp, die den Common Data Service für Apps verwendet.
-cardDescription: Erstellen einer modellgesteuerten Anwendung, die Geschäftsprozesse modelliert
-iconUrl: http://via.placeholder.com/120x120
+summary: Dieser Lernpfad bietet eine Einführung in das Erstellen einer modellgesteuerten PowerApp, die Common Data Service für Apps verwendet.
+prerequisites: "- Kenntnisse im Umgang mit PowerApps, Excel und Microsoft Flow \n"
+iconUrl: /learn/achievements/create-app-models-business-processes.svg
 levels:
 - advanced
 roles:
 - business-user
 products:
+- bizapps
 - bizapps-power-apps
-prerequisites: In diesem Lernpfad wird vorausgesetzt, dass Sie sich mit PowerApps, Excel und Microsoft Flow auskennen.
-metadata:
-  title: Dieser Lernpfad bietet eine Einführung in das Erstellen einer modellgesteuerten PowerApp, die den Common Data Service für Apps verwendet.
-  description: Dieser Lernpfad bietet eine Einführung in das Erstellen einer modellgesteuerten PowerApp, die den Common Data Service für Apps verwendet.
-  ms.openlocfilehash: d6cc61b18d01cc4fabff330cf6d4aaf1af33d9b3
-  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 09/11/2018
-  ms.locfileid: "44375900"
 modules:
 - learn-bizapps.powerapps-design-model-driven-apps
 - learn-bizapps.powerapps-common-data-service
