--- a/learn-bizapps-pr/paths/create-use-analytics-reports-power-bi/index.yml
+++ b/learn-bizapps-pr/paths/create-use-analytics-reports-power-bi/index.yml
@@ -1,25 +1,30 @@
 ### YamlMime:LearningPath
 uid: learn-bizapps.create-use-analytics-reports-power-bi
+metadata:
+  title: Erstellen und Verwenden von Analytics-Berichten mit Power BI
+  description: Dieser Lernpfad bietet eine Einführung in Power BI und vermittelt das Verwenden und Erstellen von Business Intelligence-Berichten.
+  ms.date: 09/24/2018
+  author: margoc
+  ms.author: margoc
+  ms.topic: interactive-tutorial
+  ms.prod: learning-power-bi
+  ms.openlocfilehash: 9e94f1214ad48754336f3d4917b3f9a0183fb2aa
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600665"
 title: Erstellen und Verwenden von Analytics-Berichten mit Power BI
 summary: Dieser Lernpfad bietet eine Einführung in Power BI und vermittelt das Verwenden und Erstellen von Business Intelligence-Berichten.
-cardDescription: Erstellen und Verwenden von Business Analytics-Berichten
-iconUrl: http://via.placeholder.com/120x120
+prerequisites: "- Excel-Kenntnisse \n"
+iconUrl: /learn/achievements/create-use-analytics-reports-power-bi.svg
 levels:
 - beginner
 roles:
 - business-user
 products:
+- bizapps
 - bizapps-power-bi
-prerequisites: In diesem Lernpfad wird vorausgesetzt, dass Sie sich mit Excel auskennen.
-metadata:
-  title: Erstellen und Verwenden von Analytics-Berichten mit Power BI
-  description: Dieser Lernpfad bietet eine Einführung in Power BI und vermittelt das Verwenden und Erstellen von Business Intelligence-Berichten.
-  ms.openlocfilehash: dfbae392d72102007fcc062fd63ada6597a58eae
-  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 09/11/2018
-  ms.locfileid: "44375891"
 modules:
 - learn-bizapps.get-started-with-power-bi
 - learn-bizapps.build-your-first-report
