--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/index.yml
@@ -1,24 +1,24 @@
 ### YamlMime:Module
 uid: learn-bizapps.powerapps-common-data-service
 metadata:
-  title: Erste Schritte mit dem Common Data Service
-  description: Mit dem Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standard- und benutzerdefinierte Entitäten in CDS für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
+  title: Erste Schritte mit Common Data Service für Apps
+  description: Mit Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standardentitäten und benutzerdefinierte Entitäten in Common Data Service für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: 3564bea0ad0c69f3d950268b2d1b5a22b984541c
-  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.openlocfilehash: a6fafc7db2fa129f77d53d814520ef5564edf794
+  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/12/2018
-  ms.locfileid: "44500372"
-title: Erste Schritte mit dem Common Data Service
-summary: Mit dem Common Data Service (CDS) für Apps können Sie Daten speichern und verwalten.
-abstract: Mit dem Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standard- und benutzerdefinierte Entitäten in CDS für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
+  ms.lasthandoff: 09/14/2018
+  ms.locfileid: "45600803"
+title: Erste Schritte mit Common Data Service für Apps
+summary: Mit Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standardentitäten und benutzerdefinierte Entitäten in Common Data Service für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
+abstract: "In diesem Modul lernen Sie Folgendes:\n- Erstellen von Entitäten mit Common Data Service für Apps \n"
 prerequisites: Keine
-iconUrl: http://via.placeholder.com/120x120
+iconUrl: /learn/achievements/get-started-with-powerapps-common-data-service.svg
 levels:
 - beginner
 roles:
