--- a/learn-bizapps-pr/paths/create-app-models-business-processes/index.yml
+++ b/learn-bizapps-pr/paths/create-app-models-business-processes/index.yml
@@ -8,18 +8,18 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: 5adae45a3af4a93520b7b3b14842e6f8713c86d2
-  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.openlocfilehash: 4beeaabfed434f6a0e93cf960233f6519dc614c9
+  ms.sourcegitcommit: 255768424a95e14dc5767f1710feb755467861ee
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2018
-  ms.locfileid: "45600826"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46119837"
 title: Erstellen einer modellgesteuerten Anwendung
 summary: Dieser Lernpfad bietet eine Einführung in das Erstellen einer modellgesteuerten PowerApp, die Common Data Service für Apps verwendet.
 prerequisites: "- Kenntnisse im Umgang mit PowerApps, Excel und Microsoft Flow \n"
 iconUrl: /learn/achievements/create-app-models-business-processes.svg
 levels:
-- advanced
+- beginner
 roles:
 - business-user
 products:
