--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/index.yml
@@ -8,16 +8,17 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: a6fafc7db2fa129f77d53d814520ef5564edf794
-  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.openlocfilehash: 1e901311aca925c2a9cd2e1a1a2884b8b096aef8
+  ms.sourcegitcommit: 255768424a95e14dc5767f1710feb755467861ee
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2018
-  ms.locfileid: "45600803"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46119906"
 title: Erste Schritte mit Common Data Service für Apps
 summary: Mit Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standardentitäten und benutzerdefinierte Entitäten in Common Data Service für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
-abstract: "In diesem Modul lernen Sie Folgendes:\n- Erstellen von Entitäten mit Common Data Service für Apps \n"
-prerequisites: Keine
+abstract: "In diesem Modul lernen Sie Folgendes:\n- Erstellen von Entitäten mit Common Data Service für Apps. \n"
+prerequisites: >
+  - Ein Microsoft PowerApps-Konto. Wenn Sie nicht bereits über ein PowerApps-Konto verfügen, klicken Sie auf [powerapps.com](https://web.powerapps.com/?utm_source=padocs&utm_medium=linkinadoc&utm_campaign=referralsfromdoc) auf den Link **Steigen Sie kostenlos ein**.
 iconUrl: /learn/achievements/get-started-with-powerapps-common-data-service.svg
 levels:
 - beginner
